=head1 NAME

Changes - Apache mod_perl change logfile

=head1 CHANGES

=over 3

=item 1.15_01-dev

Fixed problem with 'POST' requests when using Apache::Include
[Doug Bagley <doug@dejanews.com>]

make $r->connection->remote_ip set-able [Doug Bagley <doug@dejanews.com>]

new experimental options PERL_SAFE_STARTUP and PERL_DEFAULT_OPMASK
when httpd is starting, opcodes will be disabled during PerlModule,
PerlRequire and <Perl></Perl>
 
 -PERL_SAFE_STARTUP=1 enables PerlOpmask directive
   if PerlOpmask is "default", use mask generated from src/opcodes.txt
   else it's a file to create the mask in the format of src/opcodes.txt
   if no PerlOpmask, no opcodes are disabled
 - 'make update_op_mask OPCODE_FILE=my_opcodes.txt && make'
   changes the default opmask generated from OPCODE_FILE
 -PERL_DEFAULT_OPMASK=1 disables PerlOpmask directive, forces default
   opmask on
 -PERL_ORALL_OPMASK=1 enables $r->set_opmask method for per-directory masks
 -new module Apache::Opcode for generating op_mask

Fixed Apache::Util::ht_time test (util.t) so it doesn't fail without
any reason

added $r->finfo method

Apache::Connection and Apache::Server will not be loaded by default if
a PerlRequire file says: no mod_perl qw(Connection Server);

Apache.xs cleanups:

 -move Apache::Connection code from Apache.xs to Connection.xs
 -move Apache::Server code from Apache.xs to Server.xs
 -remove Apache::fork stuff
 -remove max_request_per_client method (use Apache::Globals instead)

=item 1.15 - July 24, 1998

new experimental XS implementation of Apache::PerlRun/Apache::Registry
handlers in module Apache::PerlRunXS (enable with PERL_RUN_XS=1)

added $r->get_server_name method

move /tmp/mod_perl_* to t/logs, t/conf

alias Apache::Util unescape_uri -> Apache::unescape_url

alias Apache::Log emerg -> emergency, crit -> critical

deal with PL_ renaming in 5.004_76+

fixes to support to apache_1.3.0+ssl_1.19 [Salvador Ortiz]

add another dTHR so we build/run with threaded Perl again
