@@ -8,6 +8,9 @@ Changes - Apache mod_perl change logfile
 
 =item 1.15_01-dev
 
+move mod_perl_cleanup_av outside of #ifdef PERL_DIRECTIVE_HANDLERS to
+cure compile problem spotted by David-Michael Lincke
+
 Fixed problem with 'POST' requests when using Apache::Include
 [Doug Bagley <doug@dejanews.com>]
 
